--- a/index.html
+++ b/index.html
@@ -240,6 +240,16 @@
             </div>
         </div>
 
+        <div class="row g-1">
+            <div class="col-12">
+                <div class="d-grid gap-2">
+                    <button type="button" class="btn btn-sm btn-primary" onclick="localStorage.clear()">
+                        LIMPIAR
+                    </button>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 <script>
